variables.Variables.scala.error
Erreur de compilation :
Variables:7: error: not found: type ==
var dejafait: Int==nbPas
                 ^Variables:7: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var dejafait: Int==nbPas
    ^Variables:7: error: local variables must be initialized
var dejafait: Int==nbPas
    ^